--- a/templates/form_submit.html
+++ b/templates/form_submit.html
@@ -29,102 +29,69 @@ h1 {
 </head>
     <body>
         <div id="container">
-            <div class="title">
-                <h1>Some Calculator</h1>
-            </div>
-            <div id="content">
-                <h2>{{ result_string }}</h2>
-            </div>
-            <div id="content">
-                <form method="post" action="{{ url_for('hello') }}">
+                            <div class="title">
+                                <h1>Some Calculator</h1>
+                            </div>
+                            <div id="content">
+                                <h2>{{ result_string }}</h2>
+                            </div>
+                <div id="content">
+                <form method="get" action="{{ url_for('hello') }}">
                 <div class="form-group">
+                <legend>Calculator Options</legend>
+
+
                   <label for="number">Please enter a number:</label>
                   <input type="text" class="form-control" name="number" /><br />
                   <label for="cats">How many cats?</label>
                   <input type="text" class="form-control" name="cats" /><br />
-                <fieldset form-group>  
+
+                <fieldset class="form-group">
+                <legend>Radio buttons</legend>
                 <div class="form-check">
-                
-                  <label for="factor">Please select a factor:</label>
                   <label class="form-check-label">
-                  <input type="radio" class="form-check-input" name="rad_1" value="1">1</label>
-                  <input type="radio" class="form-check-input" name="rad_2" value="2">2
-                  <input type="radio" class="form-check-input" name="rad_3" value="3">3 <br>
-                  <input type="submit" class="btn btn-primary"/>
-                </fieldset>
+                    <input type="radio" class="form-check-input" name="rad_1" id="optionsRadios1" value="1" checked>
+                    Equal to 1
+                  </label>
                 </div>
+                <div class="form-check">
+                <label class="form-check-label">
+                    <input type="radio" class="form-check-input" name="rad_2" id="optionsRadios2" value="option2">
+                    Equal to 2
+                  </label>
+                </div>
+                <div class="form-check disabled">
+                <label class="form-check-label">
+                    <input type="radio" class="form-check-input" name="rad_3" id="optionsRadios3" value="option3">
+                    Option three is equal to 3
+                  </label>
+                </div>
+              </fieldset>
+
+                          <div class="form-group">
+                             <label for="exampleSelect1">Example select</label>
+                                <select class="form-control" id="exampleSelect1">
+                              <option>1</option>
+                              <option>2</option>
+                              <option>3</option>
+                              <option>4</option>
+                              <option>5</option>
+                            </select>
+                          </div>
+                          <div class="form-group">
+                            <label for="exampleTextarea">Example textarea</label>
+                            <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                          </div>
+                          <div class="form-check">
+                            <label class="form-check-label">
+                              <input type="checkbox" class="form-check-input">
+                              Check me out
+                            </label>
+                          </div>
+                        
+                        <input type="submit" class="btn btn-primary"/>
+                    </div>
                 </form>
-            </div>
-
-<form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-group">
-    <label for="exampleSelect1">Example select</label>
-    <select class="form-control" id="exampleSelect1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleSelect2">Example multiple select</label>
-    <select multiple class="form-control" id="exampleSelect2">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleTextarea">Example textarea</label>
-    <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputFile">File input</label>
-    <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
-    <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
-  </div>
-  <fieldset class="form-group">
-    <legend>Radio buttons</legend>
-    <div class="form-check">
-      <label class="form-check-label">
-        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-        Option one is this and that&mdash;be sure to include why it's great
-      </label>
-    </div>
-    <div class="form-check">
-    <label class="form-check-label">
-        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
-        Option two can be something else and selecting it will deselect option one
-      </label>
-    </div>
-    <div class="form-check disabled">
-    <label class="form-check-label">
-        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled>
-        Option three is disabled
-      </label>
-    </div>
-  </fieldset>
-  <div class="form-check">
-    <label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-      Check me out
-    </label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-
             </div>
         </div>
 
